metadata/force-app/main/default/objects/ccrz__E_StorefrontAssociation__c/fields/ccrz__Account__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account this association applies to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC StorefrontAssociations</relationshipLabel>
    <relationshipName>StorefrontAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>