metadata/force-app/main/default/objects/ccrz__E_StorefrontAssociation__c/fields/ccrz__Default__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this association is a default association.  See the Storefront Associations admin guide for how this field is used.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>